--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -17,7 +17,11 @@
     <link rel="manifest" href="/src/assets/manifest.json" />
   </head>
   <body class="font-sans text-gray-900 bg-white antialiased">
+    <script type="module">
+      import { Buffer } from "buffer";
+      window.Buffer = Buffer;
+    </script> 
     <div id="app"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <script type="module" src="/src/index.tsx"></script>
   </body>
 </html>
